test/negative/unary-weakuntil01.cfr
// Test for negative weakuntil constraint

a
 b ?
  c ?
  d ?
  [ weakuntil d]


// Fail to parse as expected 
